@@ -1,3 +1,7 @@
+2004-03-04 Scott Dattalo  <scott@dattalo.com>
+	* src/processor.h, src/processor.cc, src/cod.cc:
+	Added the new meber 'Find()' to the 'Files' class.
+
 2004-03-03  Bert Driehuis <driehuis@playbeing.org>
 	* /extras/rs232-gen/rs232.c:  Now compiles under BSD
 
